// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiLink accent is rendered 1`] = `
<button
  class="ouiLink ouiLink--accent"
  type="button"
/>
`;

exports[`OuiLink allows for target and external to be controlled independently 1`] = `
<a
  class="ouiLink ouiLink--primary"
  href="#"
  rel="noopener noreferrer"
  target="_blank"
>
  <span
    class="ouiScreenReaderOnly"
  >
    (opens in a new tab or window)
  </span>
</a>
`;

exports[`OuiLink button respects the type property 1`] = `
<button
  class="ouiLink ouiLink--primary"
  type="submit"
/>
`;

exports[`OuiLink coin is rendered 1`] = `
<button
  class="ouiLink ouiLink--coin"
  type="button"
/>
`;

exports[`OuiLink danger is rendered 1`] = `
<button
  class="ouiLink ouiLink--danger"
  type="button"
/>
`;

exports[`OuiLink ghost is rendered 1`] = `
<button
  class="ouiLink ouiLink--ghost"
  type="button"
/>
`;

exports[`OuiLink if href is not specified, it renders a button of type=button 1`] = `
<button
  class="ouiLink ouiLink--primary"
  type="button"
/>
`;

exports[`OuiLink it is an external link 1`] = `
<a
  class="ouiLink ouiLink--primary"
  href="/baz/bing"
  rel="noreferrer"
>
  <span
    aria-label="External link"
    class="ouiLink__externalIcon"
    data-ouiicon-type="popout"
  />
</a>
`;

exports[`OuiLink it passes the default props through 1`] = `
<button
  aria-label="aria-label"
  class="ouiLink ouiLink--primary testClass1 testClass2"
  data-test-subj="test subject string"
  type="button"
/>
`;

exports[`OuiLink it supports both href and onClick 1`] = `
<a
  class="ouiLink ouiLink--primary"
  href="/imalink"
  rel="noreferrer"
/>
`;

exports[`OuiLink primary is rendered 1`] = `
<button
  class="ouiLink ouiLink--primary"
  type="button"
/>
`;

exports[`OuiLink secondary is rendered 1`] = `
<button
  class="ouiLink ouiLink--secondary"
  type="button"
/>
`;

exports[`OuiLink subdued is rendered 1`] = `
<button
  class="ouiLink ouiLink--subdued"
  type="button"
/>
`;

exports[`OuiLink success is rendered 1`] = `
<button
  class="ouiLink ouiLink--success"
  type="button"
/>
`;

exports[`OuiLink supports children 1`] = `
<a
  class="ouiLink ouiLink--primary"
  href="#"
  rel="noreferrer"
>
  <span>
    Hiya!!!
  </span>
</a>
`;

exports[`OuiLink supports disabled 1`] = `
<button
  class="ouiLink ouiLink-disabled"
  disabled=""
  type="button"
/>
`;

exports[`OuiLink supports href 1`] = `
<a
  class="ouiLink ouiLink--primary"
  href="/baz/bing"
  rel="noreferrer"
/>
`;

exports[`OuiLink supports rel 1`] = `
<a
  class="ouiLink ouiLink--primary"
  href="hoi"
  rel="noreferrer stylesheet"
/>
`;

exports[`OuiLink supports target 1`] = `
<a
  class="ouiLink ouiLink--primary"
  href="#"
  rel="noopener noreferrer"
  target="_blank"
>
  <span
    aria-label="External link"
    class="ouiLink__externalIcon"
    data-ouiicon-type="popout"
  />
  <span
    class="ouiScreenReaderOnly"
  >
    (opens in a new tab or window)
  </span>
</a>
`;

exports[`OuiLink text is rendered 1`] = `
<button
  class="ouiLink ouiLink--text"
  type="button"
/>
`;

exports[`OuiLink warning is rendered 1`] = `
<button
  class="ouiLink ouiLink--warning"
  type="button"
/>
`;
